feat: rabbitMQ listener

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ RABBITMQ_PORT=
 RABBITMQ_USER=
 RABBITMQ_PASSWORD=
 RABBITMQ_QUEUE=
+RABBITMQ_DIRECT_EXCHANGE=
 HEARTBEAT=
 BLOCKED_CONNECTION_TIMEOUT=
 POSTGRES_HOST=
